[package]
name = "just-a-planner"
version = "0.1.0"
edition = "2024"
authors = ["Mario Brandao <marinho@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7.8", features = ["csr"] }
leptos_meta = { version = "0.7.8" }
leptos_router = { version = "0.7.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Location"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
leptos-use = "0.15.7"
codee = "0.3.0"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
